# auth-backend

./: Makefile  main.py  pyproject.toml  seed.py  test.py  users.db
src/api/: __init__.py  api_auth.py  api_users.py
src/database/: db.py
src/dependencies/: auth.py  user.py
src/models/: user.py
src/repository/: user.py
src/service/: signup.py  user.py
